BR-002 user adds review and reviews displayed on book show

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,7 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td><%= book.title %></td>
+        <td><%= link_to book.title, book_path(book) %></td>
         <td><%= book.author %></td>
         <td><%= book.genre.name %></td>
         <td><%= link_to 'Show', book %></td>
