--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,9 @@
   <body>
     <% if user_signed_in? %>
       <div class=''>
-        Hello, <a href='/users/edit'>
-          <%= current_user.first_name %> | 
+        Hello, 
+          <%= link_to current_user.first_name, edit_user_registration_path %> | 
           <%= link_to('Logout', destroy_user_session_path,  method: :delete) %>
-        </a> 
       </div>
     <% end %>
     <p class="notice"><%= notice %></p>
