BR-002 prelim bootstrap styling

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,10 +2,10 @@
 
 <h1>Books</h1>
 
-<table>
+<table class='table table-responsiveness table-striped table-bordered table-hover'>
   <thead>
     <tr>
-      <th>Title</th>
+      <th class='id_column'>Title</th>
       <th>Author</th>
       <th>Genre</th>
       <th colspan="2"></th>
@@ -28,3 +28,4 @@
 <br>
 
 <%= link_to 'New Book', new_book_path %>
+
