--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,14 @@
 
   <body>
     <% if user_signed_in? %>
-      <div class=''>
+      <div class='form-group'>
         Hello, 
           <%= link_to current_user.first_name, edit_user_registration_path %> | 
           <%= link_to('Logout', destroy_user_session_path,  method: :delete) %>
       </div>
     <% end %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <p class='notice'><%= notice %></p>
+    <p class='alert alert-warning'><%= alert %></p>
     <%= yield %>
   </body>
 </html>
