--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -34,8 +34,8 @@
       <%= f.submit 'Submit Review' %>
     <% end %>    
     
-    <%= link_to 'Edit', edit_book_path(@book) %> |
-    <%= link_to 'Back', books_path %>
+    <%= link_to 'Edit', edit_book_path(@book), class: 'btn btn-default btn-xs' %> |
+    <%= link_to 'Back', books_path, class: 'btn btn-default btn-xs' %>
   </div>
   <div class='col-md-6'>
     <h4>Reviews for <%= @book.title %></h4>
