--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,34 +1,36 @@
-<%= form_with(model: book, local: true) do |form| %>
-  <% if book.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
-
-      <ul>
-      <% book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<div class="container">
+  <%= form_with(model: book, local: true) do |form| %>
+    <% if book.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
+        
+        <ul>
+          <% book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+    
+    <div class='form-group'>
+      <%= form.label :title %>
+      <%= form.text_field :title, id: :book_title %>
+    </div>
+    
+    <div class='form-group'>
+      <%= form.label :author %>
+      <%= form.text_field :author, id: :book_author %>
+    </div>
+    
+    <div class='form-group'>
+      <%= form.label :genre_id %>
+      <%= collection_select(:book, :genre_id, Genre.order('name ASC'), :id, :name, {include_blank: 'Select Genre'})   %>
+    </div>
+    
+    <%= form.hidden_field :user_id, value: current_user.id %>
+    
+    <div class='actions'>
+      <%= form.submit %>
     </div>
   <% end %>
-
-  <div class='field'>
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :book_title %>
-  </div>
-
-  <div class='field'>
-    <%= form.label :author %>
-    <%= form.text_field :author, id: :book_author %>
-  </div>
-
-  <div class='field'>
-    <%= form.label :genre_id %>
-    <%= collection_select(:book, :genre_id, Genre.all.order('name ASC'), :id, :name, {include_blank: 'Select Genre'})   %>
-  </div>
-
-  <%= form.hidden_field :user_id, value: current_user.id %>
-  
-  <div class='actions'>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
