--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,19 @@
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <div class='form-group'>
-        Hello, 
-          <%= link_to current_user.first_name, edit_user_registration_path %> | 
-          <%= link_to 'Home', books_path %> | 
-          <%= link_to('Logout', destroy_user_session_path,  method: :delete) %>
-      </div>
-    <% end %>
+      <% if user_signed_in? %>
+        <div class='form-group'>
+          Hello, 
+            <%= link_to current_user.first_name, edit_user_registration_path %> | 
+            <%= link_to 'Home', books_path %> | 
+            <%= link_to('Logout', destroy_user_session_path,  method: :delete) %>
+        </div>
+      <% end %>
     
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+      
+    </div>
     
   </body>
 </html>
