--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,8 @@
   </head>
 
   <body>
-      <% if user_signed_in? %>
-        <div class='form-group'>
-          Hello, 
-            <%= link_to current_user.first_name, edit_user_registration_path %> | 
-            <%= link_to 'Home', books_path %> | 
-            <%= link_to('Logout', destroy_user_session_path,  method: :delete) %>
-        </div>
-      <% end %>
+    <%= render 'layouts/header' %>
+
     
     <div class="container">
       <%= yield %>
