--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,7 +9,7 @@
         <th>Author</th>
         <th>Genre</th>
         <th>Entered By</th>
-        <th colspan="2"></th>
+        <th colspan="2">Action(s)</th>
       </tr>
     </thead>
 
@@ -19,7 +19,7 @@
           <td><%= link_to book.title, book_path(book) %></td>
           <td><%= book.author %></td>
           <td><%= book.genre.name %></td>
-          <td><%= book.user.alias %> ( <%= book.user.first_name %> <%= book.user.last_name %> )</td>
+          <td><%= book.user.alias %> <span class="grey-text">( <%= book.user.first_name %> <%= book.user.last_name %> )</span></td>
           <td><%= link_to 'Edit', edit_book_path(book) %></td>
           <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
