--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
   </head>
 
   <body>
-    <%= render 'layouts/header' %>
-
-    
+    <% if user_signed_in? %>
+      <%= render 'layouts/header' %>
+    <% end %>
     <div class="container">
       <%= yield %>
       
